--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,13 @@ body {
     width: 1000px;
     margin: 0 auto;
 }
+.shipCompare {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.shipCard {
+    margin: 10px 0;
+    width: 400px;
+}
